# drawer

./: .gitignore  README.md  grapunier_and_brunel.ipynb  pairings.py
cmake/: CMakeLists.txt
cmake/src/: CMakeLists.txt  h1.cpp  h1.h  h2.cpp  h2.h  main.cpp
cornelius/: analysis.py  analyze.ipynb  run.sh  test_run.sh
cornelius/cpp/: CMakeLists.txt  main.cpp  oldcmake.txt  protein.h  pywrap.cpp  simulation.cpp  simulation.h  test.cpp
docs/: ccc-eqs.typ  karthik-feedback.md  notes.md  possible-projects.md  progetto-cfr.md  sbi-temp-errors.md  server-logins.md  tchumatchenko-server-setup.md
doublepend/: test.py
ens-workshop/: notes.html  notes.qmd
epl-project/: main.py
fenics/: test.py
gillespie/: inference.ipynb  microscopy.ipynb  notes.ipynb
ginni/: importer.ipynb
gui/: mainwindow.py  test.py
html/: index.html
lio/: exploration.ipynb  plot.py
lua/: convert.lua  init.lua  main.lua  moda.lua  modb.lua  test.lua  test.txt  text.txt
memming/: explo.ipynb
mines/: draft.ipynb
notebooks/: FN.ipynb  artsy.ipynb  drafts.ipynb  figures.ipynb  hh_study.ipynb  kmn.ipynb  milli.ipynb  misc.ipynb  nestor.ipynb  peachoviz.ipynb  presentation_xi.ipynb  proteins.ipynb  retreat-presentation.ipynb  rngnetwork.ipynb  squadra.ipynb  study-jax.ipynb  test.py  tests.ipynb  tuning.ipynb  weird-training.ipynb  weird_reparam.ipynb
pendulum/: main.py
pietro-sbi/: .gitignore  config.toml  generate_ground_truth_joint.py  train_nle.py
pypesto-multi/: test.py
python-bindings/: notes.md
study-python-c-source/cmake/Step1/: CMakeLists.txt  TutorialConfig.h.in
(+199 files in other folders)
